--- a/img-compress.html
+++ b/img-compress.html
@@ -366,11 +366,11 @@
             <div>
                 <div class="ad-label">Advertisement</div>
                 <!-- Replace with your Google AdSense code -->
-                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-YOUR_ADSENSE_ID"></script>
+                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-app-pub-3782125759369392/7846622818"></script>
                 <!-- Image Compressor Top Banner -->
                 <ins class="adsbygoogle"
                      style="display:block"
-                     data-ad-client="ca-pub-YOUR_ADSENSE_ID"
+                     data-ad-client="ca-app-pub-3782125759369392/7846622818"
                      data-ad-slot="YOUR_AD_SLOT_ID"
                      data-ad-format="auto"
                      data-full-width-responsive="true"></ins>
@@ -438,11 +438,11 @@
             <div>
                 <div class="ad-label">Advertisement</div>
                 <!-- Replace with your Google AdSense code -->
-                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-YOUR_ADSENSE_ID"></script>
+                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-app-pub-3782125759369392/4118280736"></script>
                 <!-- Image Compressor Middle Rectangle -->
                 <ins class="adsbygoogle"
                      style="display:block"
-                     data-ad-client="ca-pub-YOUR_ADSENSE_ID"
+                     data-ad-client="ca-app-pub-3782125759369392/4118280736"
                      data-ad-slot="YOUR_AD_SLOT_ID"
                      data-ad-format="auto"
                      data-full-width-responsive="true"></ins>
@@ -477,11 +477,11 @@
             <div>
                 <div class="ad-label">Advertisement</div>
                 <!-- Replace with your Google AdSense code -->
-                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-YOUR_ADSENSE_ID"></script>
+                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-app-pub-3782125759369392/4585200509"></script>
                 <!-- Image Compressor Bottom Banner -->
                 <ins class="adsbygoogle"
                      style="display:block"
-                     data-ad-client="ca-pub-YOUR_ADSENSE_ID"
+                     data-ad-client="ca-app-pub-3782125759369392/4585200509"
                      data-ad-slot="YOUR_AD_SLOT_ID"
                      data-ad-format="auto"
                      data-full-width-responsive="true"></ins>
